Wrap children and remove element without removing children. Fixed insertHTML onError Multiple child text node view.

--- a/server-elm-style.css
+++ b/server-elm-style.css
@@ -940,7 +940,7 @@ div#modify-menu div.keyvalues>div.keyvalue #applyNewTagName.visible + div#newtag
   display: none;
 }
 
-textarea#singleChildNodeContent {
+textarea.textChildNodeContent {
   width: 100%;
   height: 100px;
   border-radius: 0.4em;
